--- a/components/auth/Auth.module.scss
+++ b/components/auth/Auth.module.scss
@@ -2,6 +2,7 @@
 
 .auth {
     display: flex;
+    justify-content: center;
 
     @media screen and (max-width: 375px) {
         flex-direction: column;
@@ -16,7 +17,7 @@
 
     .title {
         @include title();
-        max-width: 800px;
+        max-width: 700px;
 
         @media screen and (max-width: 375px) {
             font-size: 28px;
